working on the ally page

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -38,9 +38,11 @@
               <li><a href="#mamo_dialogue">Mamo</a></li>
             </ul>
           </ul>
-          <p>Text</p>
+          <p>Ally characters follow behind Shiren, and automatically move toward enemies to attack them.<br>Allies run from enemies if their HP falls below 25%, and enemies level up if they defeat an ally.<br>Shopkeepers, Sheriffs, and Guard Dogs won't attack allies, so they can be used as a shield when stealing.</p>
+          <p>Allies gain experience when Shiren defeats an enemy,<br>and Shiren and other allies also gain experience if an ally defeats an enemy.<br>Generally stats like level, HP, strength, Landmine damage, etc. are the same as Shiren for allies,<br>but unlike Shiren, their defense increases with level ups, they don't have hunger,<br>and the amount of experience needed to level up differs per character.<br>See the <a href="/shiren2/html/playing/exp_and_stat.html">Exp & Stats</a> page for details about ally stats.</p>
           <h2>Characters</h2>
           <h3>Himakichi</h3>
+          <img src="/shiren2/image/ally/himakichi.png" width="48" height="78" alt="himakichi">
           <p>Text</p>
           <table class="ally_table">
             <thead>
@@ -115,6 +117,7 @@
             </tbody>
           </table>
           <h3>Riku</h3>
+          <img src="/shiren2/image/ally/riku.png" width="60" height="106" alt="riku">
           <p>Text</p>
           <table class="ally_table">
             <thead>
@@ -147,8 +150,10 @@
             </tbody>
           </table>
           <h3>Asuka</h3>
+          <img src="/shiren2/image/ally/asuka.png" width="68" height="120" alt="asuka">
           <p>Text</p>
           <h3>Kirara</h3>
+          <img src="/shiren2/image/ally/kirara.png" width="68" height="111" alt="kirara">
           <p>Text</p>
           <table class="ally_table">
             <thead>
@@ -173,6 +178,7 @@
             </tbody>
           </table>
           <h3>Mamo</h3>
+          <img src="/shiren2/image/ally/mamo.png" width="80" height="110" alt="mamo">
           <p>Text</p>
           <h2>Dialogue</h2>
           <p>Text</p>
