--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -19,7 +19,7 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Castle</h2>
-          <p>As the story progresses, Shiren soon finds himself having to build a castle for the village.<br>Castle <a href="">Materials</a> can be found throughout Shuten Mountain, and each category comes in three grades.</p>
+          <p>As the story progresses, Shiren soon finds himself having to build a castle for the village.<br>Castle <a href="/shiren2/html/item/material.html">Materials</a> can be found throughout Shuten Mountain, and each category comes in three grades.</p>
           <p>The basic flow is:<br><span style="color:purple;">Obtain materials in dungeons → Make castle parts at the summit → Return to the village and build.</span></p>
           <p>Note that your save file will receive a castle icon when you complete the castle.</p>
           <ul>
@@ -40,8 +40,8 @@
           <p>There's a Processing Shop on the second floor of Shuten Summit, before the Raft Shop.<br>Talk to the person behind the counter there to turn castle materials into castle parts.<br>Then simply ride the raft back to Napus Village, and Shiren will automatically build the part.<br>Building takes an entire day, and you can't enter dungeons until you finish building the parts you brought.</p>
           <p>As the story progresses, Oni will occasionally attack the castle, potentially breaking sections of the castle.<br>The way to counter that is to use higher grade materials to build break-resistant castle parts.</p>
           <h3 id="castle_materials">Castle Materials</h3>
-          <p>The 5 categories of materials are "Soil", "Water", "Wood", "Rock", and "Iron Sand",<br>and the 3 grades of materials are "Normal", "Good", and "Perfect".<br>These materials can be used as regular items as well. (<a href="">Materials</a> page for details).</p>
-          <p>On a side note, <strong>Perfect grade materials take up 2 inventory slots</strong>.<br>Materials cannot be inserted into pots, but can be given to <a href="">Mamo</a>.<br>The locations of each category and grade of material is shown in the following table:</p>
+          <p>The 5 categories of materials are "Soil", "Water", "Wood", "Rock", and "Iron Sand",<br>and the 3 grades of materials are "Normal", "Good", and "Perfect".<br>These materials can be used as regular items as well. (<a href="/shiren2/html/item/material.html">Materials</a> page for details).</p>
+          <p>On a side note, <strong>Perfect grade materials take up 2 inventory slots</strong>.<br>Materials cannot be inserted into pots, but can be given to <a href="/shiren2/html/system/ally.html#mamo">Mamo</a>.<br>The locations of each category and grade of material is shown in the following table:</p>
           <table class="material_table">
             <thead>
               <tr>
