--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -19,7 +19,7 @@
       <div id="content" class="box content">
         <div>
           <h2 class="page_heading">Shiren's Allies</h2>
-          <p>Allies are NPC characters who fight monsters alongside Shiren.<br>Shiren 2 features five ally characters - Himakichi, Riku, Asuka, Kirara, and Mamo.<br>See the <a href="">Story Progression</a> page to check requirements for each character becoming your ally.</p>
+          <p>Allies are NPC characters who fight monsters alongside Shiren.<br>Shiren 2 features five ally characters - Himakichi, Riku, Asuka, Kirara, and Mamo.<br>See the <a href="/shiren2/html/playing/story_progression.html">Story Progression</a> page to check requirements for each character becoming your ally.</p>
           <ul>
             <li><a href="#characters">Characters</a></li>
             <ul>
@@ -41,9 +41,15 @@
           <p>Ally characters follow behind Shiren, and automatically move toward enemies to attack them.<br>Allies run from enemies if their HP falls below 25%, and enemies level up if they defeat an ally.<br>Shopkeepers, Sheriffs, and Guard Dogs won't attack allies, so they can be used as a shield when stealing.</p>
           <p>Allies gain experience when Shiren defeats an enemy,<br>and Shiren and other allies also gain experience if an ally defeats an enemy.<br>Generally stats like level, HP, strength, Landmine damage, etc. are the same as Shiren for allies,<br>but unlike Shiren, their defense increases with level ups, they don't have hunger,<br>and the amount of experience needed to level up differs per character.<br>See the <a href="/shiren2/html/playing/exp_and_stat.html">Exp & Stats</a> page for details about ally stats.</p>
           <h2>Characters</h2>
-          <h3 class="ally_h3">Himakichi</h3>
+          <h3 id="himakichi" class="ally_h3">Himakichi</h3>
           <img src="/shiren2/image/ally/himakichi.png" width="48" height="78" alt="himakichi">
-          <p>Text</p>
+          <p>A <a href="/shiren2/html/system/monster.html#bored_kappa_family">Bored Kappa</a> monster who always has more time than he knows what to do with.<br>He takes an interest in fighting Oni after some convincing by Koppa, and joins Shiren as an ally.</p>
+          <p>He can catch any thrown item (ally or enemy), and will then toss it at an enemy within throwing range.<br>However, he can't catch items that have the piercing property, such as Silver Arrows.<br>Catching and throwing items doesn't use up Himakichi's turn, so he can still move or attack afterward.<br>The amount of damage the thrown item deals is based on Himakichi's attack strength.<br>Note that <strong>he can catch and throw Shiren's equipment that has been disarmed by a Kengo monster</strong>.</p>
+          <p>Himakichi will drop the item on the ground if an enemy isn't within his throwing range or view.<br>However, he will throw stone items at an adjacent tile instead of dropping them on the ground.<br>If Shiren takes control of a Bow Boy family monster, he can collect Wooden Arrows, Iron Arrows,<br>or Cannonballs simply by shooting them at Himakichi.</p>
+          <p>Since he's a Kappa family monster, Himakichi can go underwater, and can attack underwater monsters.<br>He also throws underwater items toward the ground beneath Shiren so that Shiren can pick them up.</p>
+          <p>Himakichi will eat grass or seed items that have a positive effect,<br>and will also eat Dragon Grass or Flame Grass when he can hit an enemy with the fire breath.<br>Unlike other allies, he eats Herbs and Otogiriso, so those items can increase his max HP if at full HP.<br>If you want to hit Himakichi with a grass or seed item that he won't eat such as Antidote Grass,<br>you'll need to either seal him or equip a Pierce Bracelet to ensure he doesn't catch it.</p>
+          <p>Due to his ability to catch thrown items, he's effectively invincible against Bow Boy and Boy Cart.<br>He can also throw Pop Tank Cannonballs and Wolf Droid bombs back at monsters,<br>but will get hit by the explosions if the monsters are standing next to Himakichi.<br>(If Himakichi collapses due to that, the message "Himakichi self-destructed!" will be displayed).</p>
+          <p>As shown in one of the demos, you can help Himakichi defeat enemies faster by shooting arrows at him.<br>However, ideally you'll want to avoid having him fight at close range, since he has decent defense<br>but only average attack, where even Riku surpasses his attack strength starting at Lv18.<br>He's nice to have around for the Shuten Trails and <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>, but the lack of power and utility<br>becomes apparant in <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a> when compared to allies like Asuka and Mamo.<br>That said, he is able to collect underwater items, so it can still be nice to bring him along.</p>
           <table class="ally_table">
             <thead>
               <tr>
@@ -116,7 +122,7 @@
               </tr>
             </tbody>
           </table>
-          <h3 class="ally_h3">Riku</h3>
+          <h3 id="riku" class="ally_h3">Riku</h3>
           <img src="/shiren2/image/ally/riku.png" width="60" height="106" alt="riku">
           <p>Text</p>
           <table class="ally_table">
@@ -149,10 +155,10 @@
               </tr>
             </tbody>
           </table>
-          <h3 class="ally_h3">Asuka</h3>
+          <h3 id="asuka" class="ally_h3">Asuka</h3>
           <img src="/shiren2/image/ally/asuka.png" width="68" height="120" alt="asuka">
           <p>Text</p>
-          <h3 class="ally_h3">Kirara</h3>
+          <h3 id="kirara" class="ally_h3">Kirara</h3>
           <img src="/shiren2/image/ally/kirara.png" width="68" height="111" alt="kirara">
           <p>Text</p>
           <table class="ally_table">
@@ -177,20 +183,20 @@
               </tr>
             </tbody>
           </table>
-          <h3 class="ally_h3">Mamo</h3>
+          <h3 id="mamo" class="ally_h3">Mamo</h3>
           <img src="/shiren2/image/ally/mamo.png" width="80" height="110" alt="mamo">
           <p>Text</p>
           <h2>Dialogue</h2>
           <p>Text</p>
-          <h3>Himakichi</h3>
+          <h3 id="himakichi_dialogue">Himakichi</h3>
           <p>Table</p>
-          <h3>Riku</h3>
+          <h3 id="riku_dialogue">Riku</h3>
           <p>Table</p>
-          <h3>Asuka</h3>
+          <h3 id="asuka_dialogue">Asuka</h3>
           <p>Table</p>
-          <h3>Kirara</h3>
+          <h3 id="kirara_dialogue">Kirara</h3>
           <p>Table</p>
-          <h3>Mamo</h3>
+          <h3 id="mamo_dialogue">Mamo</h3>
           <p>Table</p>
         </div>
       <div id="footer" class="box footer"></div>
