working on the ally page, finished Riku

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -124,7 +124,11 @@
           </table>
           <h3 id="riku" class="ally_h3">Riku</h3>
           <img src="/shiren2/image/ally/riku.png" width="60" height="106" alt="riku">
-          <p>Text</p>
+          <p>A boy who lives in Napus Village.<br>He was a delicate child, but was inspired by Shiren's efforts to build a castle and becomes an ally.</p>
+          <p>He can shoot a slingshot at an enemy within a 2 tile radius, dealing fixed damage based on level.<br>It's similar to Porky Stones, but it's treated as a regular attack rather than a ranged attack.<br>The slingshot cannot be reflected by Tonosamadon, and doesn't get nullified by a Hoarder Statue.<br>It is affected by Knockback Statue, and Riku will receive counter damage from a Samuraidon.</p>
+          <p><strong>He tends to run toward monsters on his own despite lacking in both HP and strength</strong>.<br>He often collapses early on before you get a chance to rescue him, resulting in a leveled up monster.<br>Oddly enough, he seems to be totally fine as if nothing happened when you return to the village.<br>This tendency to collapse easily can be used to level up a monster for more experience in Sealed Room<br>(example: Stun Scorpion on 1F = 4,900 exp), or to capture a higher level monster for Monster Kingdom.</p>
+          <p>Due to this tendency, the nickname "Blue Snacky" became popular over time.<br>A proper blue colored Snacky family monster was then introduced in Shiren 4,<br>and one of the night-time monsters in Shiren 5 includes a reference to Riku as the Blue Snacky.</p>
+          <p>Some players have fun doing a <a href="/shiren2/html/playing/restricted_play.html">Restricted Play</a> where Riku must be kept alive until 99F in <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a>.</p>
           <table class="ally_table">
             <thead>
               <tr>
