add link to English Patch forum thread

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -63,6 +63,7 @@
   </div>
   <div class="sidebar-category">Links</div>
   <div class="sidebar-links">
+    ┣ <a href="https://krikzz.com/forum/index.php?topic=8495.new#new">English Patch Status</a><br>
     ┗ <a href="https://www.pj64-emu.com/public-releases">Project64 (Emulator)</a>
   </div>
 </div>
