working on the ally page, finished Asuka

--- a/html/index.html
+++ b/html/index.html
@@ -84,16 +84,17 @@
           </div>
           <div class="sidebar-category">Links</div>
           <div class="sidebar-links">
-            ┣ <a href="https://krikzz.com/forum/index.php?topic=8495.new#new">English Patch Status</a><br>
-            ┗ <a href="https://www.pj64-emu.com/public-releases">Project64 (Emulator)</a>
+            ┣ <a href="https://krikzz.com/forum/index.php?topic=8495" target="_blank">English Patch Status</a><br>
+            ┣ <a href="https://www.pj64-emu.com/public-releases" target="_blank">Project64</a><br>
+            ┗ <a href="https://retroarch.com/index.php?page=platforms" target="_blank">RetroArch</a><br>
           </div>
         </div>
       </div>
       <div id="content" class="box content">
         <div>
           <p>Welcome! This is a strategy / wiki site for Shiren 2 (Nintendo 64)<br>to accompany the English patch.</p>
-          <p>It's still a work-in-progress, so some pages don't exist yet, and others may change in time.<br>Feel free to follow the project <a href="https://krikzz.com/forum/index.php?topic=8495.0">here</a>.</p>
-          <p>A significant portion of the information found on this site is translated from the <a href="http://shiren2.lsx3.com">Japanese wiki</a>,<br>along with the addition of my own personal notes.</p>
+          <p>It's still a work-in-progress, so some pages don't exist yet, and others may change in time.<br>Feel free to follow the project <a href="https://krikzz.com/forum/index.php?topic=8495" target="_blank">here</a>.</p>
+          <p>A significant portion of the information found on this site is translated from the <a href="http://shiren2.lsx3.com" target="_blank">Japanese wiki</a>,<br>along with the addition of my own personal notes.</p>
           <p></p>
         </div>
       </div>
