--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -63,7 +63,8 @@
   </div>
   <div class="sidebar-category">Links</div>
   <div class="sidebar-links">
-    ┣ <a href="https://krikzz.com/forum/index.php?topic=8495.new#new">English Patch Status</a><br>
-    ┗ <a href="https://www.pj64-emu.com/public-releases">Project64 (Emulator)</a>
+    ┣ <a href="https://krikzz.com/forum/index.php?topic=8495" target="_blank">English Patch Status</a><br>
+    ┣ <a href="https://www.pj64-emu.com/public-releases" target="_blank">Project64</a><br>
+    ┗ <a href="https://retroarch.com/index.php?page=platforms" target="_blank">RetroArch</a><br>
   </div>
 </div>
