working on ally page, finished Kirara

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -173,7 +173,11 @@
           <p>She's the only ally able to fight monsters in <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a> on even footing,<br>and you can further increase her damage output by having her equip two Strength Bracelets.<br>However, even when she has powerful equipment, you'll still want to keep an eye on her<br>since she won't hesitate to rush toward Kengo and Weather Doll family monsters by herself.</p>
           <h3 id="kirara" class="ally_h3">Kirara</h3>
           <img src="/shiren2/image/ally/kirara.png" width="68" height="111" alt="kirara">
-          <p>Text</p>
+          <p><a href="/shiren2/html/system/monster.html#boss_oni">Boss Oni</a>'s daughter.<br>Shiren helped her out of a trap prior to arriving at Napus Village, but she left without a thanks.<br>However, she grows a crush on Shiren as she watches him build a castle, and later joins him as an ally.</p>
+          <p>She can breathe fire at monsters from a distance, dealing a fixed amount of damage based on her level.<br>Early game monsters can be wiped out quickly thanks to this ability,<br>but unlike a Dragon's breath attack, she can't breathe fire at targets around corners.<br>She will never breathe fire in a way that the flame accidentally hits Shiren.</p>
+          <p>Kirara is immune to fire damage, and therefore is a decent counter against Dragon family monsters.<br>Sources for fire damage include: Blaze Scroll, Fire Staff, Flame Grass, Dragon Grass,<br>Dragon family monster special attacks, and the 火 seal on a weapon.</p>
+          <p>She has higher base attack than Himakichi and Riku, and has average defense.<br>She can prove to be a reliable ally for the Shuten Trails and <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a>, but like Himakichi and Riku,<br>her inability to equip weapons or shields leaves her underpowered for <a href="/shiren2/html/dungeon/sealed_room.html">Sealed Room</a>.</p>
+          <p>Despite being a member of the Oni family, nothing happens when Oni repelling <a href="/shiren2/html/item/material.html#water">Water</a> is thrown at her.<br>...Yes, someone was mean enough to try that.</p>
           <table class="ally_table">
             <thead>
               <tr>
