working on the ally page, finished mamo

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -202,19 +202,171 @@
           </table>
           <h3 id="mamo" class="ally_h3">Mamo</h3>
           <img src="/shiren2/image/ally/mamo.png" width="80" height="110" alt="mamo">
-          <p>Text</p>
+          <p>Shuten Mountain's guardian deity, Mamori Gami, entered the physical realm as a dresser to help Shiren.<br>Despite having the appearance of a dresser, Mamo is able to walk and talk like other characters.<br>Unlike other allies, Mamo never attacks monsters, but can instead store up to 10 items inside its drawers.<br>In other words, it's essentially <strong>a walking high-grade Storage Pot[10]</strong>.<br>It can store any item including castle materials and pots, though note that items inside pots will vanish.<br>Simply talk to Mamo to deposit or retrieve items from its drawers at any time.</p>
+          <p>Mamo has 100 HP and 20 defense (= 40 shield strength), so it can withstand quite a few hits early on.<br>However, Mamo cannot level up, so its stats never grow beyond those numbers.<br>Monsters generally ignore Mamo for the most part, but will attack if Mamo is blocking the way<br>such as in hallways, or if Mamo is lined up with a monster that has a ranged attack.</p>
+          <p>If Mamo is defeated, all items that were inside its drawers will be spread on the ground.<br>Some items will vanish if there isn't enough space for them to be dropped on the ground,<br>such as if Mamo is defeated in a hallway and was carrying 4 or more items. (only space for 3 items).<br>So it's best to keep an eye on Mamo at all times, and avoid having it wander into hallways on its own.</p>
+          <p>Unlike Shiren GB2, items thrown at Mamo will simply hit them rather than storing the item in its drawers,<br>so it's <strong>easy to lose equipment if you encounter a Kengo in a hallway with Mamo behind you</strong>.<br>Given that fact, it's best to be extra careful on floors where Kengo family monsters can appear.</p>
+          <span class="warning_text">Mamo's items will vanish if you select "Return to Napus Village" from the main menu / copy a journal.</span>
           <h2>Dialogue</h2>
-          <p>Text</p>
+          <p>Talk to allies in dungeons to get a rough idea how much HP they have left without ending your turn.<br>Note that the amount of HP displayed when using a Knowledge Staff represents their max HP.<br>There are four levels of dialogue based on remaining HP. (1~24%, 25~49%, 50~74%, and 75~100%).<br>Alternate lines are spoken when an ally gets hit or caught by a trap, or when an ally defeats a monster.<br>Lastly, allies will have different dialogue altogether outside of dungeons.</p>
           <h3 id="himakichi_dialogue">Himakichi</h3>
-          <p>Table</p>
+          <table>
+            <thead>
+              <tr>
+                <th>HP</th>
+                <th>Normal</th>
+                <th>Monster</th>
+                <th>Trap</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="riku_dialogue">Riku</h3>
-          <p>Table</p>
+          <table>
+            <thead>
+              <tr>
+                <th>HP</th>
+                <th>Normal</th>
+                <th>Monster</th>
+                <th>Trap</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="asuka_dialogue">Asuka</h3>
-          <p>Table</p>
+          <table>
+            <thead>
+              <tr>
+                <th>HP</th>
+                <th>Normal</th>
+                <th>Monster</th>
+                <th>Trap</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="kirara_dialogue">Kirara</h3>
-          <p>Table</p>
+          <table>
+            <thead>
+              <tr>
+                <th>HP</th>
+                <th>Normal</th>
+                <th>Monster</th>
+                <th>Trap</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="3"></td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="mamo_dialogue">Mamo</h3>
-          <p>Table</p>
+          <table>
+            <thead>
+              <tr>
+                <th>HP</th>
+                <th>Normal</th>
+                <th>Trap</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2"></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       <div id="footer" class="box footer"></div>
     </div>
