finished ally page

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -221,24 +221,24 @@
             </thead>
             <tbody>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>75% or higher</td>
+                <td class="text_left">Throw an item at me<br>and I'll toss it at a monster.<br><br>I have too much<br>free time. I really do...</td>
+                <td class="text_left">That [monster name]<br>looked like it was pretty bored.</td>
+                <td class="text_left">[Trap name]?<br>Nah, I'm still bored.</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>50% ~ 74%</td>
+                <td class="text_left">I might have<br>slightly less time...</td>
+                <td class="text_left">That [monster name]<br>wasted a lot of time.</td>
+                <td class="text_left">Not good! I took a big<br>hit from [trap name]!</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>25% ~ 49%</td>
+                <td colspan="3" class="text_left">Darn it...<br>my vision is fading away...</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>1 ~ 24%</td>
+                <td colspan="3" class="text_left">I'm done for...<br>I had a leisurely life...</td>
               </tr>
             </tbody>
           </table>
@@ -254,24 +254,24 @@
             </thead>
             <tbody>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>75% or higher</td>
+                <td class="text_left">Let's get going.</td>
+                <td class="text_left">Let's be careful.<br>Stronger enemies might be nearby.</td>
+                <td class="text_left">[Trap name]<br>is no big deal.</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>50% ~ 74%</td>
+                <td class="text_left">This is getting a bit hard...</td>
+                <td class="text_left">That [monster name]<br>was pretty tough, huh.</td>
+                <td class="text_left">Ouch... [trap name]<br>got me pretty good.</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>25% ~ 49%</td>
+                <td colspan="3" class="text_left">I-I'm about to collapse...</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>1 ~ 24%</td>
+                <td colspan="3" class="text_left">Help... [player name]...</td>
               </tr>
             </tbody>
           </table>
@@ -287,24 +287,24 @@
             </thead>
             <tbody>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>75% or higher</td>
+                <td class="text_left">Throw a weapon, shield, or<br>bracelet at me and I'll equip it.</td>
+                <td class="text_left">[Monster name]<br>is no match for me!</td>
+                <td class="text_left">Don't worry, I am all right.</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>50% ~ 74%</td>
+                <td class="text_left">You're concerned for me?<br>I'm thankful.</td>
+                <td class="text_left">That [monster name]<br>was a formidable opponent.</td>
+                <td class="text_left">Ugh, [trap name] hurts!</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>25% ~ 49%</td>
+                <td colspan="3" class="text_left">I must fight through the pain.<br>Until the very end!</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>1 ~ 24%</td>
+                <td colspan="3" class="text_left">I-I can't go on...</td>
               </tr>
             </tbody>
           </table>
@@ -320,24 +320,24 @@
             </thead>
             <tbody>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>75% or higher</td>
+                <td class="text_left">Let's stay cheerful!</td>
+                <td class="text_left">[Monster name]?<br>Easy peasy.</td>
+                <td class="text_left">I can handle<br>[trap name] just fine.</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>50% ~ 74%</td>
+                <td class="text_left">I might be in trouble.</td>
+                <td class="text_left">That [monster name]<br>was a tough one.</td>
+                <td class="text_left">[Trap name] hit hard.<br>I'm really feeling it now...</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>25% ~ 49%</td>
+                <td colspan="3" class="text_left">I'm hurting so much...</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="3"></td>
+                <td>1 ~ 24%</td>
+                <td colspan="3" class="text_left">I'm sorry. This is it for me...</td>
               </tr>
             </tbody>
           </table>
@@ -352,18 +352,22 @@
             </thead>
             <tbody>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>75% or higher</td>
+                <td class="text_left">Want to Shuno something?</td>
+                <td class="text_left">I won't break apart<br>from a mere [trap name].</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>50% ~ 74%</td>
+                <td class="text_left">I hear a little bit of rattling...</td>
+                <td class="text_left">That [trap name]<br>was painful.</td>
               </tr>
               <tr>
-                <td></td>
-                <td colspan="2"></td>
+                <td>25% ~ 49%</td>
+                <td colspan="2" class="text_left">I hear a lot of creaking.<br>I might break pretty soon...</td>
+              </tr>
+              <tr>
+                <td>1 ~ 24%</td>
+                <td colspan="2" class="text_left">Goodbye [player name].<br>I'm going to fall apart now...</td>
               </tr>
             </tbody>
           </table>
