use the ally table class for dialogue tables

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -210,7 +210,7 @@
           <h2>Dialogue</h2>
           <p>Talk to allies in dungeons to get a rough idea how much HP they have left without ending your turn.<br>Note that the amount of HP displayed when using a Knowledge Staff represents their max HP.<br>There are four levels of dialogue based on remaining HP. (1~24%, 25~49%, 50~74%, and 75~100%).<br>Alternate lines are spoken when an ally gets hit or caught by a trap, or when an ally defeats a monster.<br>Lastly, allies will have different dialogue altogether outside of dungeons.</p>
           <h3 id="himakichi_dialogue">Himakichi</h3>
-          <table>
+          <table class="ally_table">
             <thead>
               <tr>
                 <th>HP</th>
@@ -243,7 +243,7 @@
             </tbody>
           </table>
           <h3 id="riku_dialogue">Riku</h3>
-          <table>
+          <table class="ally_table">
             <thead>
               <tr>
                 <th>HP</th>
@@ -276,7 +276,7 @@
             </tbody>
           </table>
           <h3 id="asuka_dialogue">Asuka</h3>
-          <table>
+          <table class="ally_table">
             <thead>
               <tr>
                 <th>HP</th>
@@ -309,7 +309,7 @@
             </tbody>
           </table>
           <h3 id="kirara_dialogue">Kirara</h3>
-          <table>
+          <table class="ally_table">
             <thead>
               <tr>
                 <th>HP</th>
@@ -342,7 +342,7 @@
             </tbody>
           </table>
           <h3 id="mamo_dialogue">Mamo</h3>
-          <table>
+          <table class="ally_table">
             <thead>
               <tr>
                 <th>HP</th>
