small fixes for ally page

--- a/html/system/ally.html
+++ b/html/system/ally.html
@@ -21,22 +21,24 @@
           <h2 class="page_heading">Shiren's Allies</h2>
           <p>Allies are NPC characters who fight monsters alongside Shiren.<br>Shiren 2 features five ally characters - Himakichi, Riku, Asuka, Kirara, and Mamo.<br>See the <a href="/shiren2/html/playing/story_progression.html">Story Progression</a> page to check requirements for each character becoming your ally.</p>
           <ul>
-            <li><a href="#characters">Characters</a></li>
-            <ul>
-              <li><a href="#himakichi">Himakichi</a></li>
-              <li><a href="#riku">Riku</a></li>
-              <li><a href="#asuka">Asuka</a></li>
-              <li><a href="#kirara">Kirara</a></li>
-              <li><a href="#mamo">Mamo</a></li>
-            </ul>
-            <li><a href="#dialogue">Dialogue</a></li>
-            <ul>
-              <li><a href="#himakichi_dialogue">Himakichi</a></li>
-              <li><a href="#riku_dialogue">Riku</a></li>
-              <li><a href="#asuka_dialogue">Asuka</a></li>
-              <li><a href="#kirara_dialogue">Kirara</a></li>
-              <li><a href="#mamo_dialogue">Mamo</a></li>
-            </ul>
+            <li><a href="#characters">Characters</a>
+              <ul>
+                <li><a href="#himakichi">Himakichi</a></li>
+                <li><a href="#riku">Riku</a></li>
+                <li><a href="#asuka">Asuka</a></li>
+                <li><a href="#kirara">Kirara</a></li>
+                <li><a href="#mamo">Mamo</a></li>
+              </ul>
+            </li>
+            <li><a href="#dialogue">Dialogue</a>
+              <ul>
+                <li><a href="#himakichi_dialogue">Himakichi</a></li>
+                <li><a href="#riku_dialogue">Riku</a></li>
+                <li><a href="#asuka_dialogue">Asuka</a></li>
+                <li><a href="#kirara_dialogue">Kirara</a></li>
+                <li><a href="#mamo_dialogue">Mamo</a></li>
+              </ul>
+            </li>
           </ul>
           <p>Ally characters follow behind Shiren, and automatically move toward enemies to attack them.<br>Allies run from enemies if their HP falls below 25%, and enemies level up if they defeat an ally.<br>Shopkeepers, Sheriffs, and Guard Dogs won't attack allies, so they can be used as a shield when stealing.</p>
           <p>Allies gain experience when Shiren defeats an enemy,<br>and Shiren and other allies also gain experience if an ally defeats an enemy.<br>Generally stats like level, HP, strength, Landmine damage, etc. are the same as Shiren for allies,<br>but unlike Shiren, their defense increases with level ups, they don't have hunger,<br>and the amount of experience needed to level up differs per character.<br>See the <a href="/shiren2/html/playing/exp_and_stat.html">Exp & Stats</a> page for details about ally stats.</p>
@@ -372,6 +374,7 @@
             </tbody>
           </table>
         </div>
+      </div>
       <div id="footer" class="box footer"></div>
     </div>
   </body>
