missing end tag for a div

--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -225,6 +225,7 @@
           </dl>
           <p>It's possible to return to 11F in Shuten Trail Mid by using a Pitfall, so one way to quickly collect<br>Perfect Wood would be to bring a Trapper Bracelet and numerous Pitfalls to repeat 11~12F.</p>
         </div>
+      </div>
       <div id="footer" class="box footer"></div>
     </div>
   </body>
