another small fix for castle page

--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -23,18 +23,20 @@
           <p>The basic flow is:<br><span style="color:purple;">Obtain materials in dungeons → Make castle parts at the summit → Return to the village and build.</span></p>
           <p>Note that your save file will receive a castle icon when you complete the castle.</p>
           <ul>
-            <li><a href="#how_to_build">How to Build</a></li>
-            <ul>
-              <li><a href="#castle_materials">Castle Materials</a></li>
-              <li><a href="#castle_parts">Castle Parts</a></li>
-              <li><a href="#oni_attacks">Oni Attacks</a></li>
-            </ul>
-            <li><a href="#post_completion">Post-Completion</a></li>
-            <ul>
-              <li><a href="#castle_decorations">Castle Decorations</a></li>
-              <li><a href="#changing_parts">Changing Parts・Golden Castle</a></li>
-              <li><a href="#quick_golden_castle">Quickly Building a Golden Castle</a></li>
-            </ul>
+            <li><a href="#how_to_build">How to Build</a>
+              <ul>
+                <li><a href="#castle_materials">Castle Materials</a></li>
+                <li><a href="#castle_parts">Castle Parts</a></li>
+                <li><a href="#oni_attacks">Oni Attacks</a></li>
+              </ul>
+            </li>
+            <li><a href="#post_completion">Post-Completion</a>
+              <ul>
+                <li><a href="#castle_decorations">Castle Decorations</a></li>
+                <li><a href="#changing_parts">Changing Parts・Golden Castle</a></li>
+                <li><a href="#quick_golden_castle">Quickly Building a Golden Castle</a></li>
+              </ul>
+            </li>
           </ul>
           <h2 id="how_to_build">How to Build</h2>
           <p>There's a Processing Shop on the second floor of Shuten Summit, before the Raft Shop.<br>Talk to the person behind the counter there to turn castle materials into castle parts.<br>Then simply ride the raft back to Napus Village, and Shiren will automatically build the part.<br>Building takes an entire day, and you can't enter dungeons until you finish building the parts you brought.</p>
